--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -236,14 +236,14 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Cave of Ancient Fear (Rip in Time #4)</td><td>1991</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>The Secret of Zokma (Weird Fantasies #1)</td><td>1991</td><td>Herb Arnold</td><td>Fantagor Press</td></tr>
 <tr><td>Forgotten Tomb (Horror in the Dark #1)</td><td>1991</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Cold Blood</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
-<tr><td>Cartoon of Blood</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
-<tr><td>Bath of Blood</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
-<tr><td>Birth of Blood</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
-<tr><td>Crypt of Blood</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Cold Blood (Horror in the Dark #4)</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Cartoon of Blood (Horror in the Dark #4)</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Bath of Blood (Horror in the Dark #2)</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Birth of Blood (Horror in the Dark #1)</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Crypt of Blood (Horror in the Dark #3)</td><td>1991</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
 <tr><td>Densaga</td><td>1992</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Seed of the Sepulcher</td><td>1992</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
-<tr><td>The Vault of Yo Vombis</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
+<tr><td>Seed of the Sepulcher (Densaga #1)</td><td>1992</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
+<tr><td>The Vault of Yo Vombis (Densaga #2)</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Return of the Sorcerer</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
 <tr><td>The Sound of Thunder</td><td>1993</td><td>Ray Bradbury</td><td>Topps Comics</td></tr>
 <tr><td>Starstone of Blood</td><td>1993</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
