--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -90,6 +90,28 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt64.jpg" title="Fever Dreams #1, Rip Off (1972)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt65.jpg" title="Creepy #132, Warren (1972)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt66.jpg" title="Angouleme Art Festival (2019)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt67.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt68.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt69.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt70.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt71.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt72.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt73.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt74.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt75.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt76.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt77.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt78.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt79.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt80.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt81.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt82.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt83.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt84.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt85.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt86.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt87.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt88.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -244,40 +266,33 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Densaga</td><td>1992</td><td>Corben</td><td>Fantagor Press</td></tr>
 <tr><td>Seed of the Sepulcher (Densaga #1)</td><td>1992</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
 <tr><td>The Vault of Yo Vombis (Densaga #2)</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Return of the Sorcerer</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
-<tr><td>The Sound of Thunder</td><td>1993</td><td>Ray Bradbury</td><td>Topps Comics</td></tr>
-<tr><td>Starstone of Blood</td><td>1993</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
+<tr><td>Return of the Sorcerer (Densaga #3)</td><td>1993</td><td>C. A. Smith- Corben</td><td>Fantagor Press</td></tr>
+<tr><td>A Sound of Thunder (Ray Bradbury Comics #1)</td><td>1993</td><td>Ray Bradbury</td><td>Topps Comics</td></tr>
+<tr><td>Starstone of Blood (Tales of the Black Diamond)</td><td>1993</td><td>Richard Margopoulos</td><td>Fantagor Press</td></tr>
 <tr><td>From the Pit</td><td>1994</td><td>Corben</td><td>Fantagor Press</td></tr>
-<tr><td>Gone Fishin'</td><td>1995</td><td>Corben</td><td>Penthouse Comix</td></tr>
+<tr><td>Gone Fishin'(Penthouse Comix #4)</td><td>1995</td><td>Corben</td><td>Penthouse Comix</td></tr>
 <tr><td>Penthouse gags</td><td>1995</td><td>Corben</td><td>Penthouse Comix</td></tr>
-<tr><td>Ringworld</td><td>1995</td><td>Larry Niven- Corben</td><td>Omni Comix</td></tr>
+<tr><td>Ringworld (Omni Comix #3)</td><td>1995</td><td>Larry Niven- Corben</td><td>Omni Comix</td></tr>
 <tr><td>Aliens/Predator: War #0-4 (cover)</td><td>1995</td><td>(cover)</td><td>Dark Horse</td></tr>
 <tr><td>Batman Black/White</td><td>1996</td><td>Strnad</td><td>DC Comics</td></tr>
 <tr><td>Denz</td><td>1996</td><td>Jan Strnad</td><td>Penthouse Comix</td></tr>
-<tr><td>Web of Fear</td><td>1997</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
+<tr><td>Web of Fear (Fantasy Illustrated #1)</td><td>1997</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
 <tr><td>Aliens: Alchemy #1-3</td><td>1997</td><td>John Arcudi</td><td>Dark Horse</td></tr>
-<tr><td>Gangland: Killer Smile</td><td>1997</td><td>John Pocsik</td><td>DC</td></tr>
-<tr><td>Heart Throb: Apposites Attract</td><td>1997</td><td>John Pocsik</td><td>DC</td></tr>
-<tr><td>Weird War (cover)</td><td>1997</td><td>Corben</td><td>DC</td></tr>
-<tr><td>Tower of Ho</td><td>1998</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
-<tr><td>The Surviver</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>Killer Smile</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>C-23 (cover)</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
-<tr><td>Satanica</td><td>1998</td><td>Glenn Danzig</td><td>Verotic</td></tr>
-<tr><td>Marvel (cover)</td><td>1998</td><td>(cover)</td><td>Byron Preiss</td></tr>
+<tr><td>Gangland: Killer Smile #2</td><td>1997</td><td>John Pocsik</td><td>DC</td></tr>
+<tr><td>Apposites Attract (Heart Throbs #3)</td><td>1999</td><td>John Pocsik</td><td>DC</td></tr>
+<tr><td>Weird War Tales(#3 cover)</td><td>1997</td><td>Corben</td><td>DC</td></tr>
+<tr><td>Tower of Ho (Fantasy Illustrated #3)</td><td>1998</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
+<tr><td>The Survivor (Weird War Tales #1)</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
+<tr><td>Killer Smile (Gangland #2)</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
+<tr><td>C-23 ( #5-6 cover)</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
+<tr><td>Mirror into Black (Verotik Illustrated #3)</td><td>1998</td><td>Glenn Danzig</td><td>Verotic</td></tr>
 <tr><td>Vampire (cover), 2 versions</td><td>1998</td><td>(cover)</td><td>Heavy Metal</td></tr>
-<tr><td>M-80</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy: Forbidden Zone</td></tr>
-<tr><td>Angel of Andromeda</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy: Forbidden Zone</td></tr>
-<tr><td>Spear &amp; Fang</td><td>1998</td><td>Robert E Howard</td><td>Cross Plains</td></tr>
-<tr><td>Wolfgirl Eats</td><td>1999</td><td>Bruce Jones</td><td>D. C. Vertigo</td></tr>
-<tr><td>Apposites Attract</td><td>1999</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 1 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 2 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 3 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill 4 (cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
-<tr><td>Grass Gator</td><td>1999</td></td><td>Corben</td><td>Jeff Williams</td></tr>
-<tr><td>Psychic Pilgrim cd</td><td>1999</td><td>Corben</td><td>Jeff Williams</td></tr>
-<tr><td>Hard Time</td><td>2000</td><td>Brian Azzarello</td><td>DC Vertigo</td></tr>
+<tr><td>M-80 (Forbidden Zone #1)</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy</td></tr>
+<tr><td>Angel of Andromeda (Forbidden Zone #1)</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy</td></tr>
+<tr><td>Spear &amp; Fang (Myth Maker)</td><td>1998</td><td>Robert E Howard</td><td>Cross Plains</td></tr>
+<tr><td>Wolfgirl Eats (Flinch #1)</td><td>1999</td><td>Bruce Jones</td><td>D. C. Vertigo</td></tr>
+<tr><td>Congo Bill (#1-3 cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Hellblazer: Hard Time</td><td>2000</td><td>Brian Azzarello</td><td>DC Vertigo</td></tr>
 <tr><td>House on the Borderland</td><td>2000</td><td>John Pocsik</td><td>DC Vertigo</td></tr>
 <tr><td>The Split</td><td>2000</td><td>Joe Lansdale</td><td>D. C. Vertigo</td></tr>
 <tr><td>BLUDD Webisodes</td><td>2000</td><td>Jan Strnad</td><td>BLUDD</td></tr>
@@ -301,7 +316,7 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Hellboy Makoma</td><td>2005</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Haunt of Horror Poe</td><td>2006</td><td>Margopoulos</td><td>Marvel</td></tr>
 <tr><td>American Splendor</td><td>2006</td><td>Harvey Pekar</td><td>DC</td></tr>
-<tr><td>Ghost Rider</td><td>2006</td><td>Daniel Way</td><td>Marvel</td></tr>
+<tr><td>Ghost Rider #5-7, 30</td><td>2006</td><td>Daniel Way</td><td>Marvel</td></tr>
 <tr><td>Jonah Hex</td><td>2007</td><td>(cover)</td><td>DC</td></tr>
 <tr><td>Living With The Dead</td><td>2007</td><td>(cover)</td><td>Dark Horse</td></tr>
 <tr><td>Conan</td><td>2007</td><td>Timothy Truman</td><td>Dark Horse</td></tr>
