--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -112,6 +112,8 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt86.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt87.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt88.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt89.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt90.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -224,7 +226,8 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>New Tales of the Arabian Nights</td><td>1978</td><td>Jan Strnad</td><td>HM-Fantagor Press</td></tr>
 <tr><td>Woman Scorned (Eerie #90)</td><td>1978</td><td>Bruce Jones</td><td>Warren</td></tr>
 <tr><td>Ogre (Metal Hurlant #28)</td><td>1978</td><td>Richard Corben</td><td>Warren</td></tr>
-<tr><td>The Bodyssey</td><td>1979</td><td>John Pocsik</td><td>HM- Fantagor Press</td></tr>
+<tr><td>1984 (#1-2)</td><td>1978</td><td>(cover)</td><td>Warren</td></tr>
+<tr><td>The Bodyssey</td><td>1979</td><td>John Pocsik</td><td>HM-Fantagor Press</td></tr>
 <tr><td>Blood's A Rover (cover)</td><td>1980</td><td>Harlan Ellison</td><td>Subterranean Press</td></tr>
 <tr><td>Jeremy Brood</td><td>1982</td><td>Jan Strnad</td><td>Fantagor Press</td></tr>
 <tr><td>Mutant World</td><td>1982</td><td>Jan Strnad</td><td>Warren-Fantagor Press</td></tr>
@@ -282,24 +285,24 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Apposites Attract (Heart Throbs #3)</td><td>1999</td><td>John Pocsik</td><td>DC</td></tr>
 <tr><td>Weird War Tales(#3 cover)</td><td>1997</td><td>Corben</td><td>DC</td></tr>
 <tr><td>Tower of Ho (Fantasy Illustrated #3)</td><td>1998</td><td>Corben</td><td>Frazetta Illustrated</td></tr>
-<tr><td>The Survivor (Weird War Tales #1)</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
-<tr><td>Killer Smile (Gangland #2)</td><td>1998</td><td>John Pocsik</td><td>D. C. Vertigo</td></tr>
+<tr><td>The Survivor (Weird War Tales #1)</td><td>1998</td><td>John Pocsik</td><td>DC Vertigo</td></tr>
+<tr><td>Killer Smile (Gangland #2)</td><td>1998</td><td>John Pocsik</td><td>DC Vertigo</td></tr>
 <tr><td>C-23 ( #5-6 cover)</td><td>1998</td><td>Jeff Mariotte</td><td>Wildstorm</td></tr>
 <tr><td>Mirror into Black (Verotik Illustrated #3)</td><td>1998</td><td>Glenn Danzig</td><td>Verotic</td></tr>
 <tr><td>Vampire (cover), 2 versions</td><td>1998</td><td>(cover)</td><td>Heavy Metal</td></tr>
 <tr><td>M-80 (Forbidden Zone #1)</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy</td></tr>
 <tr><td>Angel of Andromeda (Forbidden Zone #1)</td><td>1998</td><td>Arthur Suydam</td><td>Galaxy</td></tr>
 <tr><td>Spear &amp; Fang (Myth Maker)</td><td>1998</td><td>Robert E Howard</td><td>Cross Plains</td></tr>
-<tr><td>Wolfgirl Eats (Flinch #1)</td><td>1999</td><td>Bruce Jones</td><td>D. C. Vertigo</td></tr>
-<tr><td>Congo Bill (#1-3 cover)</td><td>1999</td><td>Scott Cunningham</td><td>D. C. Vertigo</td></tr>
+<tr><td>Wolf Girl Eats (Flinch #1)</td><td>1999</td><td>Bruce Jones</td><td>DC Vertigo</td></tr>
+<tr><td>Congo Bill (#1-3 cover)</td><td>1999</td><td>Scott Cunningham</td><td>DC Vertigo</td></tr>
 <tr><td>Hellblazer: Hard Time</td><td>2000</td><td>Brian Azzarello</td><td>DC Vertigo</td></tr>
 <tr><td>House on the Borderland</td><td>2000</td><td>John Pocsik</td><td>DC Vertigo</td></tr>
-<tr><td>The Split</td><td>2000</td><td>Joe Lansdale</td><td>D. C. Vertigo</td></tr>
+<tr><td>The Split (Strange Adventures #3)</td><td>2000</td><td>Joe Lansdale</td><td>DC Vertigo</td></tr>
 <tr><td>BLUDD Webisodes</td><td>2000</td><td>Jan Strnad</td><td>BLUDD</td></tr>
-<tr><td>Girl &amp; Worm</td><td>2001</td><td>Corben</td><td>DC: FLINCH</td></tr>
-<tr><td>Banner</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
-<tr><td>The Crusades (cover)</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
-<tr><td>Cyclops</td><td>2002</td><td>Corben</td><td>DC: SOLO</td></tr>
+<tr><td>Flinch #2, 16 (cover)</td><td>2001</td><td>(cover)</td><td>DC Vertigo</td></tr>
+<tr><td><a href="https://blzim.github.io/kb/Creation/Banner/Banner.html">Startling Stories: Banner</a> (#1-4)</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
+<tr><td>The Crusades (#8 cover)</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
+<tr><td>Cyclops (Solo #2)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
 <tr><td>The Plague</td><td>2002</td><td>Corben</td><td>DC: SOLO</td></tr>
 <tr><td>Interactive video</td><td>2002</td><td>Jeff Williams</td><td>DARKSTAR</td></tr>
 <tr><td>Cage</td><td>2002</td><td>Brian Azzarello</td><td>Marvel</td></tr>
