--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -114,6 +114,10 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt88.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt89.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt90.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt91.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt92.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt93.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt94.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
