--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -118,6 +118,18 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt92.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt93.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt94.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt95.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt96.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt97.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt98.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt99.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt100.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt101.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt102.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt105.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt106.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
