--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -44,17 +44,19 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt38.jpg" title="Last Gasp (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt39.jpg" title="Last Gasp (1972)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt29.jpg" title="Tarzan Chance Meeting (1974)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg" title="Den 1 Neverwhere (1978)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg" title="Bat Out of Hell (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt59.jpg" title="Warren (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg" title="Annual Worlds Best SF (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt13.jpg" title="Hot Stuf' #3 (1976)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg" title="First Graphic Novel, The Morning Star Press (1976)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt6.jpg" title="Hot Stuf' #5 (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt1.jpg" title="Den 1 Neverwhere (1978)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8b.jpg" title="Heavy Metal (1979)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt8.jpg" title="New Tales of the Arabian Knights, Heavy Metal (1979)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt12.jpg" title="First Graphic Novel, The Morning Star Press (1976)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt28.jpg" title="John Carter of Mars (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt3.jpg" title="John Carter of Mars (1977)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt89.jpg" title="1984 #1 (1978)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt90.jpg" title="1984 #2 (1978)"></div>
 
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt54.jpg" title="Subterranean Press (1980)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt10.jpg" title="Fantagor (1982)"></div>
@@ -107,31 +109,21 @@ Richard Corben<br>
 
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt87.jpg" title="Hellblazer: Hard Time (2000)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt88.jpg" title="House on the Borderland (2000)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt89.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt90.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt91.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt92.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt93.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt94.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt95.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt96.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt97.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt98.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt99.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt100.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt101.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt102.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt105.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt91.jpg" title="Flinch #2 (2001)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt92.jpg" title="Flinch #16 (2001)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt93.jpg" title="Crusades #8 (2001)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt94.jpg" title="Solo #2 (2002)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt110.jpg" title="Haunt of Horror Poe (2006)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt111.jpg" title="Haunt of Horror Poe (2006)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt106.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt107.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt108.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt109.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt106.jpg" title="Ragemoor (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title="Ragemoor (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title="Ragemoor (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt105.jpg" title="Ragemoor (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt30.jpg" title="Dark Horse #1 (2015)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt31.jpg" title="Dark Horse #2 (2015)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt32.jpg" title="Dark Horse #3 (2015)"></div>
@@ -140,6 +132,15 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt68.jpg" title="Ghost Rider #6 (2016)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt69.jpg" title="Ghost Rider #7 (2016)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt67.jpg" title="Ghost Rider #30(2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt95.jpg" title="Shadows on the Grave #1 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt96.jpg" title="Shadows on the Grave #2 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt97.jpg" title="Shadows on the Grave #3 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt98.jpg" title="Shadows on the Grave #4 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt99.jpg" title="Shadows on the Grave #5 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt100.jpg" title="Shadows on the Grave #6 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt101.jpg" title="Shadows on the Grave #7 (2016)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt102.jpg" title="Shadows on the Grave #8 (2016)"></div>
+
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt66.jpg" title="Angouleme Art Festival (2019)"></div>
 
 
@@ -331,12 +332,12 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td><a href="https://blzim.github.io/kb/Creation/Banner/Banner.html">Startling Stories: Banner</a> (#1-4)</td><td>2001</td><td>Brian Azzarello</td><td>Marvel</td></tr>
 <tr><td>The Crusades (#8 cover)</td><td>2001</td><td>Corben</td><td>DC Vertigo</td></tr>
 <tr><td>Cyclops (Solo #2)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
-<tr><td>The Plague</td><td>2002</td><td>Corben</td><td>DC: SOLO</td></tr>
+<tr><td>The Plague (Solo)</td><td>2002</td><td>Corben</td><td>DC</td></tr>
 <tr><td>Interactive video</td><td>2002</td><td>Jeff Williams</td><td>DARKSTAR</td></tr>
 <tr><td>Cage</td><td>2002</td><td>Brian Azzarello</td><td>Marvel</td></tr>
-<tr><td>The Mummy: Belzon's Treasure</td><td>2003</td><td>Corben</td><td>DC: SOLO</td></tr>
-<tr><td>Cowboy: Homecoming</td><td>2003</td><td>Corben</td><td>DC: SOLO</td></tr>
-<tr><td>Spector, A Missing Life</td><td>2003</td><td>John Arcudi</td><td>DC: SOLO</td></tr>
+<tr><td>The Mummy: Belzon's Treasure (Solo)</td><td>2003</td><td>Corben</td><td>DC</td></tr>
+<tr><td>Cowboy: Homecoming (Solo)</td><td>2003</td><td>Corben</td><td>DC: SOLO</td></tr>
+<tr><td>Spector, A Missing Life (Solo)</td><td>2003</td><td>John Arcudi</td><td>DC</td></tr>
 <tr><td>Mask</td><td>2003</td><td>Mark Andreyko</td><td>Wildstorm</td></tr>
 <tr><td>Kings Crown</td><td>2003</td><td>Jim Alexander</td><td>Metal Hurlant</td></tr>
 <tr><td>Punisher: The End</td><td>2004</td><td>Garth Ennis</td><td>Marvel</td></tr>
