--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -133,16 +133,15 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt69.jpg" title="Ghost Rider #7 (2016)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt67.jpg" title="Ghost Rider #30(2016)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt95.jpg" title="Shadows on the Grave #1 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt96.jpg" title="Shadows on the Grave #2 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt97.jpg" title="Shadows on the Grave #3 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt98.jpg" title="Shadows on the Grave #4 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt99.jpg" title="Shadows on the Grave #5 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt100.jpg" title="Shadows on the Grave #6 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt101.jpg" title="Shadows on the Grave #7 (2016)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt102.jpg" title="Shadows on the Grave #8 (2016)"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt96.jpg" title="Shadows on the Grave #2 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt97.jpg" title="Shadows on the Grave #3 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt98.jpg" title="Shadows on the Grave #4 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt99.jpg" title="Shadows on the Grave #5 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt100.jpg" title="Shadows on the Grave #6 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt101.jpg" title="Shadows on the Grave #7 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt102.jpg" title="Shadows on the Grave #8 (2017)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt113.jpg" title="Shadows on the Grave TPB (2018)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt66.jpg" title="Angouleme Art Festival (2019)"></div>
-
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
