--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -120,10 +120,10 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt109.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt106.jpg" title="Ragemoor (2012)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title="Ragemoor (2012)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title="Ragemoor (2012)"></div>
-<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt105.jpg" title="Ragemoor (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title="Ragemoor #1 (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title="Ragemoor #2 (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt105.jpg" title="Ragemoor #3 (2012)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt106.jpg" title="Ragemoor #4 (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt30.jpg" title="Dark Horse #1 (2015)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt31.jpg" title="Dark Horse #2 (2015)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt32.jpg" title="Dark Horse #3 (2015)"></div>
