--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -118,7 +118,9 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt107.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt108.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt109.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt114.jpg" title="Cable #6 (2008)"></div>
 
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt115.jpg" title="Dark Horse (2010)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title="Ragemoor #1 (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt104.jpg" title="Ragemoor #2 (2012)"></div>
@@ -354,10 +356,12 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Hellboy, The Troll Witch</td><td>2007</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Haunt of Horror Lovecraft</td><td>2008</td><td>Corben</td><td>Dark Horse</td></tr>
 <tr><td>Hellboy, Crooked Man</td><td>2008</td><td>Mignola</td><td>Dark Horse</td></tr>
+<tr><td>Cable (cover)</td><td>2008</td><td>(cover)</td><td>Marvel</td></tr>
 <tr><td>Starr the Slayer</td><td>2009</td><td>Daniel Way</td><td>Marvel</td></tr>
 <tr><td>Hellboy, Bride of Hell</td><td>2009</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Hellboy, Camazotz</td><td>2009</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Buzzard</td><td>2010</td><td>Eric Powell</td><td>Dark Horse</td></tr>
+<tr><td>Hellboy in Mexico</td><td>2010</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Hellboy, Double Feature of Evil</td><td>2010</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Hellboy, Being Human</td><td>2010</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Murky World</td><td>2012</td><td>Corben</td><td>Dark Horse</td></tr>
@@ -369,7 +373,6 @@ During this time he also contributed to other publications such as <a href="../V
 <tr><td>Morella and the Murders in the Rue Morgue</td><td>2014</td><td>Edgar Allen Poe</td><td>Dark Horse</td></tr>
 <tr><td>Spirits of the Dead</td><td>2014</td><td>Edgar Allen Poe</td><td>Dark Horse</td></tr>
 <tr><td>Rat God #1-5, TPB</td><td>2015</td><td>Corben</td><td>Dark Horse</td></tr>
-<tr><td>Hellboy in Mexico</td><td>2016</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>Shadows on the Grave #1-8</td><td>2016</td><td>Corben</td><td>Dark Horse</td></tr>
 <tr><td>Conan Ancient Gods and Sorcerers</td><td>2017</td><td>Mignola</td><td>Dark Horse</td></tr>
 <tr><td>The Rook Archives Vol 3 (cover)</td><td>2017</td><td>(cover)</td><td>Dark Horse</td></tr>
