--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -44,6 +44,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt38.jpg" title="Last Gasp (1971)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt39.jpg" title="Last Gasp (1972)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt29.jpg" title="Tarzan Chance Meeting (1974)"></div>
+<div class="mySlides" style="text-align: center;"><img src="1976ComixInternational4.jpg" title="Comix International #4 (1974)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt2.jpg" title="Bat Out of Hell (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt59.jpg" title="Warren (1977)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt4.jpg" title="Annual Worlds Best SF (1977)"></div>
@@ -120,6 +121,7 @@ Richard Corben<br>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt109.jpg" title="Haunt of Horror Lovecraft (2008)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt114.jpg" title="Cable #6 (2008)"></div>
 
+<div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt116.jpg" title="Dark Horse (2010)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt115.jpg" title="Dark Horse (2010)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt9.jpg" title="Dark Horse (2012)"></div>
 <div class="mySlides" style="text-align: center;"><img src="RichardCorbenArt103.jpg" title="Ragemoor #1 (2012)"></div>
