--- a/Zoot/Zoot.html
+++ b/Zoot/Zoot.html
@@ -21,6 +21,13 @@ Publisher: Fox Feature<br>
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Zoot1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Zoot13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
